<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/order_status_3minutes"
          android:icon="@android:drawable/ic_menu_share"
          android:title="@string/order_status_3minutes" />
    <item android:id="@+id/order_status_arrived"
          android:icon="@android:drawable/ic_menu_share"
          android:title="@string/order_status_arrived" />
    <item android:id="@+id/order_status_delivered"
          android:icon="@android:drawable/ic_menu_share"
          android:title="@string/order_status_delivered" />
    <item android:id="@+id/order_status_delivery_problem"
          android:icon="@android:drawable/ic_menu_share"
          android:title="@string/order_status_delivery_problem" />
    <item android:id="@+id/order_status_payment_error"
          android:icon="@android:drawable/ic_menu_share"
          android:title="@string/order_status_payment_error" />

</menu>