<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/login_top_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.com.alecrimapp.alecrimdelivery.activities.LoginActivity">

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:background="@drawable/bkg_field_border"
        android:drawableLeft="@drawable/ic_login_email"
        android:padding="@dimen/login_field_padding"
        android:nextFocusDown="@+id/password_edit_text"
        android:layout_marginTop="@dimen/login_field_margin"
        android:textColorHint="@color/fieldBorderColor"
        android:text="contato@fernandogallo.com"
        android:hint="@string/email_hint"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:background="@drawable/bkg_field_border"
        android:layout_height="wrap_content"
        android:textColorHint="@color/fieldBorderColor"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:text="pass@word1"
        android:padding="@dimen/login_field_padding"
        android:layout_marginTop="@dimen/login_field_margin"
        android:nextFocusDown="@+id/btnLogin"
        android:layout_marginBottom="@dimen/login_field_margin"
        android:drawableLeft="@drawable/ic_login_pwd"
        android:hint="@string/password_hint"/>

    <Button
        android:id="@+id/btnLogin"
        android:textColor="@android:color/white"
        android:background="@drawable/bkg_button"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/login_field_margin"
        android:layout_marginBottom="@dimen/login_field_margin"
        android:padding="@dimen/login_button_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"/>

</LinearLayout>
